--- a/client/index.html
+++ b/client/index.html
@@ -11,14 +11,63 @@
 
 </head>
 <body>
+    <div class="wrapper">
 
-    <!-- My body is ready -->
+        <h1>Popoll!</h1>
 
-    <div id="UserList">
-        <ul>
-            <li v-repeat="users">{{ username }}</li>
+        <h4>Make polls quickly and share them with others just as fast!</h4>
+
+        <form class="poll-form  align-center">
+            <input placeholder="Start typing to start a new poll!" class="align-center  one-whole  poll-form__input  nudge-half--bottom">
+
+            <button class="poll-form__button  one-half">Start That Poll Son!</button>
+        </form>
+
+
+        <h3>My polls</h3>
+
+        <ul class="poll-list  list--plain">
+            <li class="poll-list__item">
+                <section class="clear-fix">
+                    <footer class="plain--links  poll-list__actions  float-right">
+                        <time class="poll-list__time">00:56</time>
+                        <a href="#" class="icon--eye  poll-list__watch"></a>
+                    </footer>
+
+                    <h4 class="poll-list__question  float-left">What's the best action flic ever?</h4>
+
+                    <h4 class="poll-list__answer  align-center">This One</h4>
+                </section>
+            </li>
+
+            <li class="poll-list__item">
+                <section class="clear-fix">
+                    <footer class="plain--links  poll-list__actions  float-right">
+                        <time class="poll-list__time">00:56</time>
+                        <a href="#" class="icon--eye  poll-list__watch"></a>
+                    </footer>
+
+                    <h4 class="poll-list__question  float-left">What's the best action flic ever?</h4>
+
+                    <h4 class="poll-list__answer  align-center">This One</h4>
+                </section>
+            </li>
+
+            <li class="poll-list__item">
+                <section class="clear-fix">
+                    <footer class="plain--links  poll-list__actions  float-right">
+                        <time class="poll-list__time">00:56</time>
+                        <a href="#" class="icon--eye  poll-list__watch"></a>
+                    </footer>
+
+                    <h4 class="poll-list__question  float-left">What's the best action flic ever?</h4>
+
+                    <h4 class="poll-list__answer  align-center">This One</h4>
+                </section>
+            </li>
         </ul>
-    </div>
+
+    </div><!-- wrapper -->
 
     <script src="/dist/scripts/main.js"></script>
 </body>
