Hidden submit button

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
         <form class="poll-form  align-center">
             <input placeholder="Start typing to start a new poll!" class="align-center  one-whole  poll-form__input  nudge-half--bottom">
 
-            <button class="poll-form__button  one-half">Start That Poll Son!</button>
+            <button class="poll-form__button  invisible  one-half">Start That Poll Son!</button>
         </form>
 
 
