Awww yeah, creating a new poll works!

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <title></title>
 
     <link rel="stylesheet" href="/styles/main.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 </head>
 <body>
