Added some functionality for comments and adding options

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,6 @@
     <title></title>
 
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 </head>
 <body>
@@ -70,6 +69,6 @@
 
     </div><!-- wrapper -->
 
-    <script src="/dist/scripts/main.js"></script>
+    <script src="/dist/scripts/view-models/index.js"></script>
 </body>
 </html>
