Voting and deletion of choices

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
         <form v-on="submit: submit" class="js-poll-form  poll-form  align-center">
             <input v-model="question" placeholder="Start typing to start a new poll!" class="align-center  one-whole  poll-form__input  nudge-half--bottom">
 
-            <button v-class="invisible: !isValid" class="poll-form__button  invisible  one-half">Start That Poll Son!</button>
+            <button v-class="invisible: !isValid" class="button--jiggly  invisible  one-half">Start That Poll Son!</button>
         </form>
 
 
